# Picsart

./: 15-Month_ML_DL_Program_Syllabus.md  15-Month_ML_DL_Program_Syllabus_1.md  15-Month_ML_DL_Program_Syllabus_2.md  18-Month-ML-DL-Syllabus.md  Lab_Plan_15-Month_ML_DL_Program.md  README.md  a.c  a.out  main.c  vector.h
Web/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  RUN_LOCALLY.md  docker-compose.yml
Web/backend/: Dockerfile  pyproject.toml
Web/backend/app/: __init__.py  config.py  database.py  main.py
Web/backend/app/api/: auth.py  labs.py  submissions.py
Web/backend/app/models/: schemas.py
Web/backend/app/workers/: tasks.py
Web/backend/labs/: __init__.py  lab_1_1_config.py
Web/backend/tests/: test_main.py
Web/frontend/: index.html  package-lock.json  package.json  tsconfig.json
Web/frontend/src/: App.tsx
Web/frontend/src/data/: labs.ts
Web/frontend/src/pages/: Dashboard.tsx  LabDetail.tsx  LabTree.tsx  Labs.tsx  Landing.tsx  Login.tsx  Register.tsx
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
